@@ -23,6 +23,8 @@
   22. Prop_LocationBound is more flexible with ABSOLUTE, PLAYEROK, and TIMEOUT arguments
   23. Scriptable commands QUESTMOB, QUESTOBJ, and QUESTSCRIPTED can now scan ALL quests
   24. ShapeShift forms 6-11 added, and shapeshift now governed by skills/shapeshift.txt
+  25. New Race flag: infatigueable -- prevents fatigue, given to undead and golems.
+  26. New standard Race: Flesh Golem
 # Build 5.9.6 Release 12/31/2017
    *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
    1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
